--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 layout: default
 title: Home
 ---
-  
+  <div class="row">
+      <div class="col-12">
+          <h4 class="mb-4">Laboratori per tipo</h4>
+      </div> <!-- end col -->
+  </div>
   <div class="row">
      
       {% for category in site.categories %}
