--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ title: Home
 
   <div class="row">
   	  {% for post in paginator.posts %}
-      <div class="col-sm-6 col-lg-4">
-          <div class="card">
+      <div class="col-sm-6 col-lg-4 mb-2">
+          <div class="card h-100">
           	  {% if post.image %}
           	  <img src="{{ '/public/images/' | append: post.image | absolute_url }}" class="card-img" alt="...">
               {% endif %}
@@ -46,8 +46,10 @@ title: Home
                   <p class="card-text">
                   		<small class="text-muted">{{ post.date | date_to_string }}</small>
                   </p>
-                  <a href="{{ post.url }}" class="btn btn-primary mt-2 stretched-link">Vai al laboratorio</a>
               </div> <!-- end card-body -->
+              <div class="card-footer">
+                  <a href="{{ post.url }}" class="btn btn-info">Vai al laboratorio</a>
+          	  </div>
           </div> <!-- end card -->
       </div> <!-- end col-->
       {% endfor %}
