--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ title: Home
   <div class="row">
      
       {% for event in site.data["events"] %}
-      <div class="col-md-4">
+      <div class="col-md-4 pb-2">
       	 <a href="{{ site.url }}/event/{{event[0] | slugify }}/index.html" class="text-white">
-	    	 <div class="card bg-info overflow-hidden">
+	    	 <div class="card bg-info overflow-hidden h-100">
 	             <div class="card-body">
 	             	 <div class="toll-free-box text-center">
-		                 <h4> <i class="text-warning fa-regular fa-{{ event[0] | split: ' ' | last | slice: 0}}"></i>
-							{{ event[0]}}
+		                 <h4><i class="fa-regular fa-{{ event[0] | split: ' ' | last | slice: 0 | downcase }}"></i>
+							{{ event[0] }}
 						 </h4>
 					 </div>
 	              </div> <!-- end card-body-->
@@ -37,12 +37,12 @@ title: Home
   <div class="row">
      
       {% for category in site.categories %}
-      <div class="col-md-4">
+      <div class="col-md-4 pb-2">
       	 <a href="{{ site.url }}/category/{{category[0] | slugify }}/index.html" class="text-white">
-	    	 <div class="card bg-success overflow-hidden">
+	    	 <div class="card bg-success overflow-hidden h-100">
 	             <div class="card-body">
 	             	 <div class="toll-free-box text-center">
-		                 <h4> <i class="text-warning fa-regular fa-{{ category[0] | split: ' ' | last | slice: 0}}"></i>
+		                 <h4> <i class="fa-regular fa-{{ category[0] | split: ' ' | last | slice: 0 | downcase }}"></i>
 							{{ category[0]}}
 						 </h4>
 					 </div>
@@ -64,24 +64,21 @@ title: Home
 
   <div class="row">
   	  {% for post in paginator.posts %}
-      <div class="col-sm-6 col-lg-4 mb-2">
+      <div class="col-sm-6 col-lg-4 pb-2">
+      	<a href="{{ post.url }}">
           <div class="card h-100">
           	  {% if post.image %}
           	  <img src="{{ '/public/images/' | append: post.image | absolute_url }}" class="card-img" alt="...">
               {% endif %}
               <div class="card-body">
-                  <h5 class="card-title">{{ post.title }}</h5>
-                  <p class="card-text">
-                  {{ post.abstract }}
-                  </p>
+                  <h4 class="card-title text-dark">{{ post.title }}</h4>
+                  <p class="text-dark">{{ post.author }}</p>
                   <p class="card-text">
                   		<small class="text-muted">{{ post.date | date_to_string }}</small>
                   </p>
               </div> <!-- end card-body -->
-              <div class="card-footer">
-                  <a href="{{ post.url }}" class="btn btn-info">Vai al laboratorio</a>
-          	  </div>
           </div> <!-- end card -->
+        </a>
       </div> <!-- end col-->
       {% endfor %}
   </div>
